--- a/config.yml
+++ b/config.yml
@@ -4,46 +4,139 @@ bot:
       displayName: "Remote"
       enabledAsGroup: false
       additionalUsers: []
-      admins:
-        - U01THB38EDV
-    wellington:
-      displayName: "NZ: Wellington"
+      admins: []
+    us:
+      displayName: "US"
       enabledAsGroup: false
       additionalUsers: []
       admins: []
-    hamilton:
-      displayName: "HZ: Hamilton"
-      enabledAsGroup: false
+    saratov:
+      displayName: "RU: Saratov"
+      enabledAsGroup: true
       additionalUsers: []
       admins:
-        - U01THB38EDV
-    gisborne:
-      displayName: "NZ: Gisborne"
+        - U4BSUSM5Z # asharov
+        - UKDHWCUAG # ytsvetkova
+    spb:
+      displayName: "RU: Saint Petersburg"
       enabledAsGroup: false
-      additionalUsers:
-        - U01THB38EDV
+      additionalUsers: []
       admins: []
+    moscow:
+      displayName: "RU: Moscow"
+      enabledAsGroup: false
+      additionalUsers: []
+      admins: []
+    kazan:
+      displayName: "RU: Kazan"
+      enabledAsGroup: false
+      additionalUsers: []
+      admins: []
+    kharkiv:
+      displayName: "UA: Kharkiv"
+      enabledAsGroup: false
+      additionalUsers: []
+      admins: []
+    lviv:
+      displayName: "UA: Lviv"
+      enabledAsGroup: false
+      additionalUsers: []
+      admins: []
+    kiev:
+      displayName: "UA: Kyiv"
+      enabledAsGroup: false
+      additionalUsers: []
+      admins: []
+    dnipro:
+      displayName: "UA: Dnipro"
+      enabledAsGroup: false
+      additionalUsers: []
+      admins: []
+    ljubljana:
+      displayName: "SI: Ljubljana"
+      enabledAsGroup: false
+      additionalUsers: []
+      admins: []
+    wroclaw:
+      displayName: "PL: Wroclaw"
+      enabledAsGroup: true
+      additionalUsers: []
+      admins:
+        - U4BSUSM5Z   # asharov
+        - U028UJ77Z5X # kkriukova
+    krakow:
+      displayName: "PL: Krakow"
+      enabledAsGroup: true
+      additionalUsers: []
+      admins:
+        - U4BSUSM5Z   # asharov
+        - U028UJ77Z5X # kkriukova
+    gdansk:
+      displayName: "PL: Gdansk"
+      enabledAsGroup: true
+      additionalUsers: []
+      admins:
+        - U4BSUSM5Z   # asharov
+        - U028UJ77Z5X # kkriukova
+    belgrade:
+      displayName: "RS: Belgrade"
+      enabledAsGroup: true
+      additionalUsers: []
+      admins:
+        - U4BSUSM5Z # asharov
+        - UKDHWCUAG # ytsvetkova
+    london:
+      displayName: "GB: London"
+      enabledAsGroup: false
+      additionalUsers: []
+      admins: []
+    chisinau:
+      displayName: "MD: Chisinau"
+      enabledAsGroup: false
+      additionalUsers: []
+      admins: []
+    guadalajara:
+      displayName: "MX: Guadalajara"
+      enabledAsGroup: false
+      additionalUsers: []
+      admins: []
+    yerevan:
+      displayName: "AM: Yerevan"
+      enabledAsGroup: true
+      additionalUsers: []
+      admins:
+        - U4BSUSM5Z # asharov
+        - UKDHWCUAG # ytsvetkova
 
   groups:
+    poland:
+      displayName: "PL: All"
+      enabled: true
+      additionalUsers: []
+      admins:
+        - U4BSUSM5Z   # asharov
+        - U028UJ77Z5X # kkriukova
     worldwide:
       displayName: "Worldwide"
       enabled: true
       additionalUsers: []
       admins:
-        - U01THB38EDV
-    eng_boardgames:
-      displayName: "ENG: boardgames"
-      enabled: true
-      additionalUsers: []
-      admins:
-        - U4BSUSM5Z
+        - U4BSUSM5Z # asharov
+        - UKDHWCUAG # ytsvetkova
     eng_data_analytics:
       displayName: "ENG: Data Analytics"
       enabled: true
       additionalUsers: []
       admins:
-        - U4BSUSM5Z
-        - U02E7A02DDH
+        - U4BSUSM5Z   # asharov
+        - U02E7A02DDH # adedov
+    a_calibrate:
+      displayName: "ACC: Calibrate"
+      enabled: true
+      additionalUsers: []
+      admins:
+        - U4BSUSM5Z   # asharov
+        - U02E7A02DDH # adedov
 
 database:
   host: mysql
