--- a/config.yml
+++ b/config.yml
@@ -12,10 +12,10 @@ bot:
       admins: []
     saratov:
       displayName: "RU: Saratov"
-      enabledAsGroup: true
+      enabledAsGroup: false
       additionalUsers: []
       admins:
-        - U4BSUSM5Z # asharov
+        - UC8NM4YF8 # acherevatkin
         - UKDHWCUAG # ytsvetkova
     spb:
       displayName: "RU: Saint Petersburg"
@@ -62,28 +62,28 @@ bot:
       enabledAsGroup: true
       additionalUsers: []
       admins:
-        - U4BSUSM5Z   # asharov
+        - UC8NM4YF8 # acherevatkin
         - U028UJ77Z5X # kkriukova
     krakow:
       displayName: "PL: Krakow"
       enabledAsGroup: true
       additionalUsers: []
       admins:
-        - U4BSUSM5Z   # asharov
+        - UC8NM4YF8 # acherevatkin
         - U028UJ77Z5X # kkriukova
     gdansk:
       displayName: "PL: Gdansk"
       enabledAsGroup: true
       additionalUsers: []
       admins:
-        - U4BSUSM5Z   # asharov
+        - UC8NM4YF8 # acherevatkin
         - U028UJ77Z5X # kkriukova
     belgrade:
       displayName: "RS: Belgrade"
       enabledAsGroup: true
       additionalUsers: []
       admins:
-        - U4BSUSM5Z # asharov
+        - UC8NM4YF8 # acherevatkin
         - UKDHWCUAG # ytsvetkova
     london:
       displayName: "GB: London"
@@ -95,17 +95,19 @@ bot:
       enabledAsGroup: false
       additionalUsers: []
       admins: []
-    guadalajara:
-      displayName: "MX: Guadalajara"
-      enabledAsGroup: false
+    mexico:
+      displayName: "Mexico"
+      enabledAsGroup: true
       additionalUsers: []
-      admins: []
+      admins:
+        - UC8NM4YF8 # acherevatkin
+        - UKDHWCUAG # ytsvetkova
     yerevan:
       displayName: "AM: Yerevan"
       enabledAsGroup: true
       additionalUsers: []
       admins:
-        - U4BSUSM5Z # asharov
+        - UC8NM4YF8 # acherevatkin
         - UKDHWCUAG # ytsvetkova
 
   groups:
@@ -114,28 +116,28 @@ bot:
       enabled: true
       additionalUsers: []
       admins:
-        - U4BSUSM5Z   # asharov
+        - UC8NM4YF8 # acherevatkin
         - U028UJ77Z5X # kkriukova
     worldwide:
       displayName: "Worldwide"
       enabled: true
       additionalUsers: []
       admins:
-        - U4BSUSM5Z # asharov
+        - UC8NM4YF8 # acherevatkin
         - UKDHWCUAG # ytsvetkova
     eng_data_analytics:
       displayName: "ENG: Data Analytics"
       enabled: true
       additionalUsers: []
       admins:
-        - U4BSUSM5Z   # asharov
+        - UC8NM4YF8 # acherevatkin
         - U02E7A02DDH # adedov
     a_calibrate:
       displayName: "ACC: Calibrate"
       enabled: true
       additionalUsers: []
       admins:
-        - U4BSUSM5Z   # asharov
+        - UC8NM4YF8 # acherevatkin
         - U02E7A02DDH # adedov
 
 database:
